--- a/landofriver.html
+++ b/landofriver.html
@@ -40,19 +40,19 @@
 	<div w3-include-html="/sidebar.html"></div>
 		<article>
 		<h2>Land of River</h2>
-		<a href="https://drive.google.com/uc?id=1Mdz4p11D3Vu1cSPfAafb4M6JJbqMf_Vo" target="_blank">
-		<p><image src="https://drive.google.com/uc?id=1Mdz4p11D3Vu1cSPfAafb4M6JJbqMf_Vo"; style="width:600px;height:500px;"></a></p>
+		<a href="https://user-images.githubusercontent.com/64807615/82155084-ee66e280-98a4-11ea-9350-bf65b87c5395.png" target="_blank">
+		<p><image src="https://user-images.githubusercontent.com/64807615/82155084-ee66e280-98a4-11ea-9350-bf65b87c5395.png"; style="width:600px;height:500px;"></a></p>
 
-		<a href="https://drive.google.com/uc?id=1-7o04S9dZJ4uIVpO4Tv96cEoLtBSSe9k" target="_blank" style="color:black">
-		<image src="https://drive.google.com/uc?id=1-7o04S9dZJ4uIVpO4Tv96cEoLtBSSe9k"; style="width:250px;height:250px;";></a>
+		<a href="https://user-images.githubusercontent.com/64807615/82155087-ef980f80-98a4-11ea-8aa2-d71dbf9c2910.jpg" target="_blank" style="color:black">
+		<image src="https://user-images.githubusercontent.com/64807615/82155087-ef980f80-98a4-11ea-8aa2-d71dbf9c2910.jpg"; style="width:250px;height:250px;";></a>
 		<p> (A) <b>Furious Alpha Wolf</b> (Level 30) </p>			
 
-		<a href="https://drive.google.com/uc?id=1E5ygD-KWgpRI1M-RQr5z6XtDOXZxGsKJ" target="_blank" style="color:black">
-		<image src="https://drive.google.com/uc?id=1E5ygD-KWgpRI1M-RQr5z6XtDOXZxGsKJ"; style="width:250px;height:250px;"></a>
+		<a href="https://user-images.githubusercontent.com/64807615/82155085-ef980f80-98a4-11ea-939c-b09f17de6581.jpg" target="_blank" style="color:black">
+		<image src="https://user-images.githubusercontent.com/64807615/82155085-ef980f80-98a4-11ea-939c-b09f17de6581.jpg"; style="width:250px;height:250px;"></a>
 		<p> (B) <b>Rampaging Thug</b> (Level 35)</p>
 		
-		<a href="https://drive.google.com/uc?id=1hRDXtILycKdCbPi1Bh_3vVn1_DsPTzos" target="_blank" style="color:black">
-		<image src="https://drive.google.com/uc?id=1hRDXtILycKdCbPi1Bh_3vVn1_DsPTzos"; style="width:250px;height:250px;"></a>
+		<a href="https://user-images.githubusercontent.com/64807615/82155082-ed35b580-98a4-11ea-8092-323e0760642d.jpg" target="_blank" style="color:black">
+		<image src="https://user-images.githubusercontent.com/64807615/82155082-ed35b580-98a4-11ea-8092-323e0760642d.jpg"; style="width:250px;height:250px;"></a>
 		<p> (C) <b>Furious Rogue Ninja</b> (Level 40)</p>
 		</article>
 	</section>
