--- a/sunagakure.html
+++ b/sunagakure.html
@@ -40,23 +40,23 @@
 	<div w3-include-html="/sidebar.html"></div>
 	<article>
     <h2>Sunagakure</h2>
-    <a href="https://drive.google.com/uc?id=1ylOEQe0bQcBP4hXiBO3XoNTiZdgqx4r5" target="_blank">
-    <p><image src="https://drive.google.com/uc?id=1ylOEQe0bQcBP4hXiBO3XoNTiZdgqx4r5"; style="width:600px;height:500px;"></p></a>
+    <a href="https://user-images.githubusercontent.com/64807615/82155168-85cc3580-98a5-11ea-9d1c-ecff6d36268b.png" target="_blank">
+    <p><image src="https://user-images.githubusercontent.com/64807615/82155168-85cc3580-98a5-11ea-9d1c-ecff6d36268b.png"; style="width:600px;height:500px;"></p></a>
 
 
-    <a href="https://drive.google.com/uc?id=1ADRSdv1KHG5NbkG9QVZW9bdk0t8QXLVw" target="_blank" style="color:black">
+    <a href="https://user-images.githubusercontent.com/64807615/82155166-849b0880-98a5-11ea-80b8-3a49c0b70b63.jpg" target="_blank" style="color:black">
     <p> (A) <b>Blood Thirsty Hyena</b> (Level 20) </p>
-    <image src="https://drive.google.com/uc?id=1ADRSdv1KHG5NbkG9QVZW9bdk0t8QXLVw"; style="width:250px;height:250px";>
+    <image src="https://user-images.githubusercontent.com/64807615/82155166-849b0880-98a5-11ea-80b8-3a49c0b70b63.jpg"; style="width:250px;height:250px";>
     </a>
 
-    <a href="https://drive.google.com/uc?id=1OavmCR2E5kG-ExWtDbWncUToNlqrNuTS" target="_blank" style="color:black">
+    <a href="https://user-images.githubusercontent.com/64807615/82155167-85cc3580-98a5-11ea-97ce-91252ad82184.jpg" target="_blank" style="color:black">
     <p> (B) <b>Rot Poison Sand King</b> (Level 25) </p>
-    <p><image src="https://drive.google.com/uc?id=1OavmCR2E5kG-ExWtDbWncUToNlqrNuTS"; style="width:250px;height:250px"></p>
+    <p><image src="https://user-images.githubusercontent.com/64807615/82155167-85cc3580-98a5-11ea-97ce-91252ad82184.jpg"; style="width:250px;height:250px"></p>
     </a>
 
-    <a href="https://drive.google.com/uc?id=1GODN5TPtENIoMrEwIfIKqehnYj3LBbhU" target="_blank" style="color:black">
+    <a href="https://user-images.githubusercontent.com/64807615/82155169-8795f900-98a5-11ea-9533-b4fe1f5c791a.jpg" target="_blank" style="color:black">
     <p> (B) <b>Sunagakure Rogue Leader</b> (Level 30)</p>
-    <p><image src="https://drive.google.com/uc?id=1GODN5TPtENIoMrEwIfIKqehnYj3LBbhU"; style="width:250px;height:250px"></p>
+    <p><image src="https://user-images.githubusercontent.com/64807615/82155169-8795f900-98a5-11ea-9533-b4fe1f5c791a.jpg"; style="width:250px;height:250px"></p>
     </a>
 
 	</article>
