--- a/konohagakure.html
+++ b/konohagakure.html
@@ -40,32 +40,32 @@
 	<div w3-include-html="/sidebar.html"></div>
 		<article>
     <h2>Konohagakure</h2>
-    <a href="https://drive.google.com/uc?id=1SbFkNKdd4rda99s-fmEJZ36xLp_Iou4a" target="_blank" style="color:black">
-    <p><image src="https://drive.google.com/uc?id=1SbFkNKdd4rda99s-fmEJZ36xLp_Iou4a" width="640"; style="width:600px;height:500px;"></p>
+    <a href="https://user-images.githubusercontent.com/64807615/82157831-5a9e1200-98b6-11ea-9444-d31b1a24709d.png" target="_blank" style="color:black">
+    <p><image src="https://user-images.githubusercontent.com/64807615/82157831-5a9e1200-98b6-11ea-9444-d31b1a24709d.png" width="640"; style="width:600px;height:500px;"></p>
     </a>
-    <a href="https://drive.google.com/uc?id=1Ux7ue2fpuQ5WTtJZZwdnbedZbuu0h8Sv" target="_blank" style="color:black">
+    <a href="https://user-images.githubusercontent.com/64807615/82157823-583bb800-98b6-11ea-9c20-2b3ff9c4303e.jpg" target="_blank" style="color:black">
     <p style="text-align:left"> (1) <b>Otogakure Spy Leader</b> (Level 45) </p>
-    <image src="https://drive.google.com/uc?id=1Ux7ue2fpuQ5WTtJZZwdnbedZbuu0h8Sv"; style="width:250px;height:250px;";>
+    <image src="https://user-images.githubusercontent.com/64807615/82157823-583bb800-98b6-11ea-9c20-2b3ff9c4303e.jpg"; style="width:250px;height:250px;";>
     </a>
 
-    <a href="https://drive.google.com/uc?id=1WUomvpff9bRCyvup8l7tdkIjc27j-9HW" target="_blank" style="color:black">
+    <a href="https://user-images.githubusercontent.com/64807615/82157826-596ce500-98b6-11ea-986c-12231dde0188.jpg" target="_blank" style="color:black">
     <p style="text-align:left"> (2) <b>Bounty Samurai Leader</b> (Level 50)</p>
-    <image src="https://drive.google.com/uc?id=1WUomvpff9bRCyvup8l7tdkIjc27j-9HW"; style="width:250px;height:250px;">
+    <image src="https://user-images.githubusercontent.com/64807615/82157826-596ce500-98b6-11ea-986c-12231dde0188.jpg"; style="width:250px;height:250px;">
     </a>
 
-    <a href="https://drive.google.com/uc?id=1gOjO8ebLnOQwJkF1HdA6kvv4BPCI0IM5" target="_blank" style="color:black">
+    <a href="https://user-images.githubusercontent.com/64807615/82157827-596ce500-98b6-11ea-886c-f09568c070db.jpg" target="_blank" style="color:black">
     <p style="text-align:left"> (3) <b>Fierce Wolf King</b> (Level 55)</p>
-    <image src="https://drive.google.com/uc?id=1gOjO8ebLnOQwJkF1HdA6kvv4BPCI0IM5"; style="width:250px;height:250px;">
+    <image src="https://user-images.githubusercontent.com/64807615/82157827-596ce500-98b6-11ea-886c-f09568c070db.jpg"; style="width:250px;height:250px;">
     </a>
 
-    <a href="https://drive.google.com/uc?id=1nmQ3D_gIOx03AdDm36Geow1bxBuJgdic" target="_blank" style="color:black">
+    <a href="https://user-images.githubusercontent.com/64807615/82157829-5a057b80-98b6-11ea-8553-1dd4860a15c5.jpg" target="_blank" style="color:black">
     <p style="text-align:left"> (4) <b> Furious Boar King </b> (Level 55)</p>
-    <image src="https://drive.google.com/uc?id=1nmQ3D_gIOx03AdDm36Geow1bxBuJgdic"; style="width:250px;height:250px;">
+    <image src="https://user-images.githubusercontent.com/64807615/82157829-5a057b80-98b6-11ea-8553-1dd4860a15c5.jpg"; style="width:250px;height:250px;">
     </a>
 	    
-    <a href="https://drive.google.com/uc?id=10tczXzoW0IrjmZCSGhPHF9JyXkatwM2A" target="_blank" style="color:black">
+    <a href="https://user-images.githubusercontent.com/64807615/82157830-5a9e1200-98b6-11ea-98fe-f5e32d696c93.jpg" target="_blank" style="color:black">
     <p style="text-align:left"> (5) <b> Hidden Squad Captain </b> (Level 60)</p>
-    <image src="https://drive.google.com/uc?id=10tczXzoW0IrjmZCSGhPHF9JyXkatwM2A"; style="width:250px;height:250px;">
+    <image src="https://user-images.githubusercontent.com/64807615/82157830-5a9e1200-98b6-11ea-98fe-f5e32d696c93.jpg"; style="width:250px;height:250px;">
     </a>
 		</article>
 	</section>
