--- a/amegakure.html
+++ b/amegakure.html
@@ -40,22 +40,22 @@
 	<div w3-include-html="/sidebar.html"></div>
 	<article>
 	<h2>Amegakure Boss Location</h2>
-	<a href="https://drive.google.com/uc?id=1ErdVSZgBmf0q6GKpOPp6aq-f1IeDzJPv" target="_blank">
-	<p><image src="https://drive.google.com/uc?id=1ErdVSZgBmf0q6GKpOPp6aq-f1IeDzJPv"; style="width:600px;height:500px;"></p></a>
+	<a href="https://user-images.githubusercontent.com/64807615/82157936-2545f400-98b7-11ea-8975-66ff427533db.png" target="_blank">
+	<p><image src="https://user-images.githubusercontent.com/64807615/82157936-2545f400-98b7-11ea-8975-66ff427533db.png"; style="width:600px;height:500px;"></p></a>
 
-	<a href="https://drive.google.com/uc?id=1MwJ6RAbo7Wz1deTaawqbWt7ndNq6ByAm" target="_blank" style="color:black">
+	<a href="https://user-images.githubusercontent.com/64807615/82157937-25de8a80-98b7-11ea-943c-cbf8edb2f0e6.jpg" target="_blank" style="color:black">
 	<p> (1) <b>Blood Thirsty Spotted Hyena King</b> (Level 65) </p>
-	<image src="https://drive.google.com/uc?id=1MwJ6RAbo7Wz1deTaawqbWt7ndNq6ByAm"; style="width:250px;height:250px";>
+	<image src="https://user-images.githubusercontent.com/64807615/82157937-25de8a80-98b7-11ea-943c-cbf8edb2f0e6.jpg"; style="width:250px;height:250px";>
 	</a>
 
-	<a href="https://drive.google.com/uc?id=1vg2OeowEQtoeiNsF53zmixDa48zSvROF" target="_blank" style="color:black">
+	<a href="https://user-images.githubusercontent.com/64807615/82157935-2545f400-98b7-11ea-80e1-f70df7489e75.jpg" target="_blank" style="color:black">
 	<p> (2) <b>Kirin Snake King</b> (Level 70) </p>
-	<p><image src="https://drive.google.com/uc?id=1vg2OeowEQtoeiNsF53zmixDa48zSvROF"; style="width:250px;height:250px"></p>
+	<p><image src="https://user-images.githubusercontent.com/64807615/82157935-2545f400-98b7-11ea-80e1-f70df7489e75.jpg"; style="width:250px;height:250px"></p>
 	</a>
 
-	<a href="https://drive.google.com/uc?id=1JTnq3FwO28ac3VfhGZ7ebXcKLaFpfC65" target="_blank" style="color:black">
+	<a href="https://user-images.githubusercontent.com/64807615/82157934-2414c700-98b7-11ea-9467-314fdf71d616.jpg" target="_blank" style="color:black">
 	<p> (3) <b>God's Follower</b> (Level 75)</p>
-	<p><image src="https://drive.google.com/uc?id=1JTnq3FwO28ac3VfhGZ7ebXcKLaFpfC65"; style="width:250px;height:250px"></p>
+	<p><image src="https://user-images.githubusercontent.com/64807615/82157934-2414c700-98b7-11ea-9467-314fdf71d616.jpg"; style="width:250px;height:250px"></p>
 	</a>
 
 	</article>
