--- a/rby.html
+++ b/rby.html
@@ -42,20 +42,20 @@
 		<h2>Red, Blue, Yellow "Eggs"</h2>
 		<p><i>*not sure what they’re exactly called*</i><p>
 <hr>
-		<a href="https://drive.google.com/uc?id=1xNwei0P84ORyam1-__H5bcfc52-iFtHM" target="_blank">
-		<image src="https://drive.google.com/uc?id=1xNwei0P84ORyam1-__H5bcfc52-iFtHM"; style="width:600px;height:500px;"></a>
+		<a href="https://user-images.githubusercontent.com/64807615/82158070-fbd99800-98b7-11ea-9f8c-549654ef954f.png" target="_blank">
+		<image src="https://user-images.githubusercontent.com/64807615/82158070-fbd99800-98b7-11ea-9f8c-549654ef954f.png"; style="width:600px;height:500px;"></a>
 		<p>Go to Konohagakure and proceed to the yellow location.</p>
 <hr>
-		<a href="https://drive.google.com/uc?id=1a_o1Ej_EkS5wg4GDPmiYUFJVK0clbKeQ" target="_blank" style="color:black">
-		<image src="https://drive.google.com/uc?id=1a_o1Ej_EkS5wg4GDPmiYUFJVK0clbKeQ"; style="width:600px;height:250px;";></a>
+		<a href="https://user-images.githubusercontent.com/64807615/82158071-fc722e80-98b7-11ea-820b-5cc6f001d7ac.jpg" target="_blank" style="color:black">
+		<image src="https://user-images.githubusercontent.com/64807615/82158071-fc722e80-98b7-11ea-820b-5cc6f001d7ac.jpg"; style="width:600px;height:250px;";></a>
 		<p> You’ll see 3 sets of of red, blue, and yellow eggs. </p>
 <hr>
-		<a href="https://drive.google.com/uc?id=1B8spr3tPPItGb4bXcKqXzmr6ej_w8cTa" target="_blank" style="color:black">
-		<image src="https://drive.google.com/uc?id=1B8spr3tPPItGb4bXcKqXzmr6ej_w8cTa"; style="width:600px;height:250px;"></a>
+		<a href="https://user-images.githubusercontent.com/64807615/82158068-faa86b00-98b7-11ea-8b13-25fe34ba160d.jpg" target="_blank" style="color:black">
+		<image src="https://user-images.githubusercontent.com/64807615/82158068-faa86b00-98b7-11ea-8b13-25fe34ba160d.jpg"; style="width:600px;height:250px;"></a>
 		<p> Set the eggs at the markings located near the area. </p>
 <hr>			
-		<a href="https://drive.google.com/uc?id=14PegDzCpl9UsZTfEiCEj6mOcLEFEqyxy" target="_blank" style="color:black">
-		<image src="https://drive.google.com/uc?id=14PegDzCpl9UsZTfEiCEj6mOcLEFEqyxy"; style="width:600px;height:250px;"></a>
+		<a href="https://user-images.githubusercontent.com/64807615/82158069-fb410180-98b7-11ea-9418-1f64d037e0dd.jpg" target="_blank" style="color:black">
+		<image src="https://user-images.githubusercontent.com/64807615/82158069-fb410180-98b7-11ea-9418-1f64d037e0dd.jpg"; style="width:600px;height:250px;"></a>
 		<p> Once everything has been set in place, it’ll start raining Level 1 Magatamas.</p>
 <hr>
 		<p><b>Important notes:</b></p>
