--- a/ht.html
+++ b/ht.html
@@ -42,26 +42,26 @@
 		<h2>Help Trader</h2>
 		<hr>
 		<p> Location of traders at Land of Wind </p>
-		<a href="https://drive.google.com/uc?id=1lhE8vrtT8sV08haKAI2OBI_shrSh7yJo" target="_blank">
-		<p><image src="https://drive.google.com/uc?id=1lhE8vrtT8sV08haKAI2OBI_shrSh7yJo"; style="width:600px;height:500px;"></p></a>
+		<a href="https://user-images.githubusercontent.com/64807615/82158301-8242a980-98b9-11ea-95d1-a9e3a3f8cb78.jpg" target="_blank">
+		<p><image src="https://user-images.githubusercontent.com/64807615/82158301-8242a980-98b9-11ea-95d1-a9e3a3f8cb78.jpg"; style="width:600px;height:500px;"></p></a>
 
 		<p> Location of traders at Amegakure </p>
-		<a href="https://drive.google.com/uc?id=1tyS8qtTKQLY5nGq2698a312SJZ6n8Ju4" target="_blank">
-		<p><image src="https://drive.google.com/uc?id=1tyS8qtTKQLY5nGq2698a312SJZ6n8Ju4"; style="width:600px;height:500px;"></p></a>
+		<a href="https://user-images.githubusercontent.com/64807615/82158302-82db4000-98b9-11ea-89b3-4ec359992b13.jpg" target="_blank">
+		<p><image src="https://user-images.githubusercontent.com/64807615/82158302-82db4000-98b9-11ea-89b3-4ec359992b13.jpg"; style="width:600px;height:500px;"></p></a>
 
-		<a href="https://drive.google.com/uc?id=1XkP9ARcZPNCkNcCQTzrSEK6YpmaL_qiM" target="_blank" style="color:black">
+		<a href="https://user-images.githubusercontent.com/64807615/82158303-8373d680-98b9-11ea-825e-f200f19c56c5.jpg" target="_blank" style="color:black">
 		<p style="text-align:left"> Locate any trader that still has barrels / boxes beside them. </p>
-		<image src="https://drive.google.com/uc?id=1XkP9ARcZPNCkNcCQTzrSEK6YpmaL_qiM"; style="width:600px;height:250px;";>
+		<image src="https://user-images.githubusercontent.com/64807615/82158303-8373d680-98b9-11ea-825e-f200f19c56c5.jpg"; style="width:600px;height:250px;";>
 		</a>
 
-		<a href="https://drive.google.com/uc?id=1DpzuGhPuMEJ9KAcZgMBi7FZSDR4YVL1N" target="_blank" style="color:black">
+		<a href="https://user-images.githubusercontent.com/64807615/82158304-8373d680-98b9-11ea-8721-bdd88e6810be.jpg" target="_blank" style="color:black">
 		<p style="text-align:left"> You will need to drop the boxes at the traders. </p>
-		<image src="https://drive.google.com/uc?id=1DpzuGhPuMEJ9KAcZgMBi7FZSDR4YVL1N"; style="width:600px;height:250px;";>
+		<image src="https://user-images.githubusercontent.com/64807615/82158304-8373d680-98b9-11ea-8721-bdd88e6810be.jpg"; style="width:600px;height:250px;";>
 		</a>
 			
-		<a href="https://drive.google.com/uc?id=1_H4ZV6kLvnqROhE3EmoOLrOjYi1uHQGH" target="_blank" style="color:black">
+		<a href="https://user-images.githubusercontent.com/64807615/82158300-81aa1300-98b9-11ea-8b08-6d5bcb846fc1.jpg" target="_blank" style="color:black">
 		<p style="text-align:left"> You may do this for 10 times each day per map to claim Ramen, Coins, or Enchance Charm I </p>
-		<image src="https://drive.google.com/uc?id=1_H4ZV6kLvnqROhE3EmoOLrOjYi1uHQGH"; style="width:600px;height:250px;";>
+		<image src="https://user-images.githubusercontent.com/64807615/82158300-81aa1300-98b9-11ea-8b08-6d5bcb846fc1.jpg"; style="width:600px;height:250px;";>
 		</a>
 
 		</article>
