--- a/stbtr.html
+++ b/stbtr.html
@@ -40,36 +40,37 @@
 	<div w3-include-html="/sidebar.html"></div>
 		<article>
 		<h2>Strange Things by the River</h2>
+		<i>bounty quest and big world quest</i>
 <hr>
 
-		<a href="https://drive.google.com/uc?id=11ShjCcr6oM6211g5VXoAhsHylwcPyN5N" target="_blank" style="color:black">
-		<image src=" https://drive.google.com/uc?id=11ShjCcr6oM6211g5VXoAhsHylwcPyN5N"; style="width:600px;height:250px;";>
+		<a href="https://user-images.githubusercontent.com/64807615/82158740-3e9d6f00-98bc-11ea-9636-9327e91ad127.jpg" target="_blank" style="color:black">
+		<image src=" https://user-images.githubusercontent.com/64807615/82158740-3e9d6f00-98bc-11ea-9636-9327e91ad127.jpg"; style="width:600px;height:250px;";>
 		</a>
 		<p><b>Part 1: </b> Head to the Land of Rivers 0/1</p>
 		<p><b>Part 2: </b> Carry fish into the river 0/6</p>
 <hr>
-		<a href="https://drive.google.com/uc?id=1ko_9JvMElI7gvLkEEi0ZuzSk_VYr-eNy" target="_blank" style="color:black">
-		<image src=" https://drive.google.com/uc?id=1ko_9JvMElI7gvLkEEi0ZuzSk_VYr-eNy"; style="width:600px;height:250px;";>
+		<a href="https://user-images.githubusercontent.com/64807615/82158743-3e9d6f00-98bc-11ea-9304-0758bd16abb1.jpg" target="_blank" style="color:black">
+		<image src="https://user-images.githubusercontent.com/64807615/82158743-3e9d6f00-98bc-11ea-9304-0758bd16abb1.jpg"; style="width:600px;height:250px;";>
 		</a>
 		<p><b>Part 1: Investigate the cause of the anomaly</b></p>
 		<p>You can press the quest and let the auto-navigate take you to the location. It is important that you let the auto-navigate finish.</p>
 <hr>
-		<a href="https://drive.google.com/uc?id=1kk_8hR2B82iiMd30d_aoQQtXftz7qXQ1" target="_blank" style="color:black">
-		<image src=" https://drive.google.com/uc?id=1kk_8hR2B82iiMd30d_aoQQtXftz7qXQ1"; style="width:600px;height:250px;";></a>
+		<a href="https://user-images.githubusercontent.com/64807615/82158734-3c3b1500-98bc-11ea-8936-5f9cf6dd5fd6.jpg" target="_blank" style="color:black">
+		<image src=" https://user-images.githubusercontent.com/64807615/82158734-3c3b1500-98bc-11ea-8936-5f9cf6dd5fd6.jpg"; style="width:600px;height:250px;";></a>
 		<p>You will know that the auto-navigate has finished when the quest has change from <b>“Head to the Land of Rivers 0/1”</b> to<b> “Carry fish into the river 1/6“.</b></p>
 <hr>
-		<a href="https://drive.google.com/uc?id=1kX6CCuFEu_HilOP3CAdERhtswMcbXmSp" target="_blank" style="color:black">
-		<image src=" https://drive.google.com/uc?id=1kX6CCuFEu_HilOP3CAdERhtswMcbXmSp"; style="width:600px;height:250px;";></a>
+		<a href="https://user-images.githubusercontent.com/64807615/82158737-3d6c4200-98bc-11ea-87a1-c739cc207e1e.jpg" target="_blank" style="color:black">
+		<image src=" https://user-images.githubusercontent.com/64807615/82158737-3d6c4200-98bc-11ea-87a1-c739cc207e1e.jpg"; style="width:600px;height:250px;";></a>
 		<p><br>Part 2: Carry fish into the river 1/6</b></p>
 		<p>You need to carry those fishes on the land into to the water holes. There are a total of 6 fishes that you can carry into any of the 3 water holes.</p>
 <hr>			
 
-		<a href="https://drive.google.com/uc?id=1S-LvUNtLtRRZrQgVWNPXNX_rmAP-UMB-" target="_blank" style="color:black">
-		<image src=" https://drive.google.com/uc?id=1S-LvUNtLtRRZrQgVWNPXNX_rmAP-UMB-"; style="width:600px;height:250px;";></a>
+		<a href="https://user-images.githubusercontent.com/64807615/82158738-3e04d880-98bc-11ea-8c39-88195e2e40c6.jpg" target="_blank" style="color:black">
+		<image src="https://user-images.githubusercontent.com/64807615/82158738-3e04d880-98bc-11ea-8c39-88195e2e40c6.jpg"; style="width:600px;height:250px;";></a>
 		<p>You will need to drop the fishes into any of the water holes.</p>
 <hr>
-		<a href="https://drive.google.com/uc?id=1w9vJkrlB6Q_VQU5QDhVfqc7vbYwcRC62" target="_blank" style="color:black">
-		<image src=" https://drive.google.com/uc?id=1w9vJkrlB6Q_VQU5QDhVfqc7vbYwcRC62"; style="width:600px;height:250px;";></a>
+		<a href="https://user-images.githubusercontent.com/64807615/82158739-3e04d880-98bc-11ea-8795-036638985c18.jpg" target="_blank" style="color:black">
+		<image src="https://user-images.githubusercontent.com/64807615/82158739-3e04d880-98bc-11ea-8795-036638985c18.jpg"; style="width:600px;height:250px;";></a>
 		<p>Do this for 6 times and you’ll finish your quest.</p>
 		<p><b>Bonus:</b>You’ll receive Ramen from completing the Big World quests</p>
 		</article>
