--- a/bwq.html
+++ b/bwq.html
@@ -40,7 +40,7 @@
 <div class="row">
   <div class="column" style="width:25%"> 
 		<a href="/rby.html" style="color:black">
-		<image src="xx"; style="width:100%;height:150px;";></a>
+		<image src="https://user-images.githubusercontent.com/64807615/82158069-fb410180-98b7-11ea-9418-1f64d037e0dd.jpg"; style="width:100%;height:150px;";></a>
   </div>
 
   <div class="column" style="width:75%">
@@ -52,7 +52,7 @@
 <div class="row">
   <div class="column" style="width:25%"> 
 		<a href="/ht.html" style="color:black">
-		<image src="xx"; style="width:100%;height:150px;";></a>
+		<image src="https://user-images.githubusercontent.com/64807615/82158300-81aa1300-98b9-11ea-8b08-6d5bcb846fc1.jpg"; style="width:100%;height:150px;";></a>
   </div>
 
   <div class="column" style="width:75%">
@@ -64,7 +64,7 @@
 <div class="row">
   <div class="column" style="width:25%"> 
 		<a href="/stbtr.html" style="color:black">
-		<image src="xx"; style="width:100%;height:150px;";></a>
+		<image src="https://user-images.githubusercontent.com/64807615/82158737-3d6c4200-98bc-11ea-87a1-c739cc207e1e.jpg"; style="width:100%;height:150px;";></a>
   </div>
 
   <div class="column" style="width:75%">
