--- a/bwq.html
+++ b/bwq.html
@@ -35,8 +35,12 @@
 <body>
 	<div w3-include-html="/navbar.html"></div> 
 	<script>includeHTML();</script>
-		<h2>Big World QUests</h2>
-
+		<h2>Big World Quests</h2>
+<ul>
+<li>Stranger Things by The River, Red Yellow Blue Eggs, and Sand Dunes shares the same big world county</li>
+<li>Help Trader at Sunagakure has a different count and can be done 10 times each days</li>
+<li>Help Trader at Amegakure has a different count and can be done 10 times each days </li>
+</ul>
 <div class="row">
   <div class="column" style="width:25%"> 
 		<a href="/rby.html" style="color:black">
