--- a/bm.html
+++ b/bm.html
@@ -35,7 +35,7 @@
 <body>
 	<div w3-include-html="/navbar.html"></div> 
 	<script>includeHTML();</script>
-		<h2>Boss Monsters</h2><i> (or Elite Monsters)</i>
+	<p><h2>Boss Monsters</h2><i> (or Elite Monsters)</i></p>
 <ul>
 <li><b>Item drops:</b> Enhanced Charms I, Wash Amulet I & II, Old Treasure Map, Level 1 Magatama, Limit Break I, Ninjutsu Activation Book</li>
 <li><b>Respawn time:</b> One hour after time of death</li>
