--- a/bh.html
+++ b/bh.html
@@ -46,6 +46,12 @@
   <div class="column" style="width:85%">
   	<a href="/sclass.html" style="color:black">
 	<h3> S Class Bounty </h3></a>
+	<ul>
+	<li> Coins: 100,000 </li>
+	<li> Experience: 13500 </li>
+	<li> Fame: 50 </li>
+	<li> Items: Charm Creation, Wash Amulet I </li>
+	</ul> 
   </div>
 </div>
 
