--- a/aclass.html
+++ b/aclass.html
@@ -40,7 +40,7 @@
 <div class="row">
   <div class="column" style="width:25%"> 
 		<a href="/oi.html" style="color:black">
-		<image src="xx"; style="width:100%;height:150px;";></a>
+		<image src="https://user-images.githubusercontent.com/64807615/82736085-72174800-9d59-11ea-8bb8-d41c79fdf47c.jpg"; style="width:100%;height:150px;";></a>
   </div>
 
   <div class="column" style="width:75%">
