--- a/oi.html
+++ b/oi.html
@@ -45,7 +45,7 @@
 
   <div class="column" style="width:75%">
 	<p><b>Part 1:</b> Go to Land of Wind 0/1</p>
-	<p><b>Part 2:<.b> Eavesdrop Enemy Intel 0/1 </p>
+	<p><b>Part 2:</b> Eavesdrop Enemy Intel 0/1 </p>
   </div>
 </div>
 <hr>
