--- a/oi.html
+++ b/oi.html
@@ -39,7 +39,7 @@
 
 <div class="row">
   <div class="column" style="width:25%"> 
-		<a href="https://user-images.githubusercontent.com/64807615/82736080-704d8480-9d59-11ea-8a90-bca157e234f9.jpg" style="color:black">
+		<a href="https://user-images.githubusercontent.com/64807615/82736080-704d8480-9d59-11ea-8a90-bca157e234f9.jpg" target="_blank" style="color:black">
 		<image src="https://user-images.githubusercontent.com/64807615/82736080-704d8480-9d59-11ea-8a90-bca157e234f9.jpg"; style="width:100%;height:150px;";></a>
   </div>
 
@@ -80,9 +80,9 @@
 
   <div class="column" style="width:75%">
 	<p> You’ll see 3 different types of ninjas: </p>
-	<p> Sunagakure Ninja Scout – Those with the red life and red circles and are constantly roaming. They are extremely powerful and will kill you with one blow. </p>
-	<p> Sunagakure Sand Ninja – Those with no circles and with blue life. They are just dummies to confuse you. </p>
-	<p> Rogue Ninja – This is the ninja that you need to find to complete the quest. </p>
+	<p> <b style="color:red"> Sunagakure Ninja Scout </b> – Those with the red life and red circles and are constantly roaming. They are extremely powerful and will kill you with one blow. </p>
+	<p> <b style="color:yellow"> Sunagakure Sand Ninja </b> – Those with no circles and with blue life. They are just dummies to confuse you. </p>
+	<p> <b style="color:green"> Rogue Ninja </b> – This is the ninja that you need to find to complete the quest. </p>
   </div>
 </div>
 <hr>
