--- a/oi.html
+++ b/oi.html
@@ -81,7 +81,7 @@
   <div class="column" style="width:75%">
 	<p> You’ll see 3 different types of ninjas: </p>
 	<p> <b style="color:red"> Sunagakure Ninja Scout </b> – Those with the red life and red circles and are constantly roaming. They are extremely powerful and will kill you with one blow. </p>
-	<p> <b style="color:yellow"> Sunagakure Sand Ninja </b> – Those with no circles and with blue life. They are just dummies to confuse you. </p>
+	<p> <b style="color:orange"> Sunagakure Sand Ninja </b> – Those with no circles and with blue life. They are just dummies to confuse you. </p>
 	<p> <b style="color:green"> Rogue Ninja </b> – This is the ninja that you need to find to complete the quest. </p>
   </div>
 </div>
