--- a/oi.html
+++ b/oi.html
@@ -36,18 +36,12 @@
 	<div w3-include-html="/navbar.html"></div> 
 	<script>includeHTML();</script>
 		<h2>Obtain intel</h2>
-
-<div class="row">
-  <div class="column" style="width:25%"> 
-		<a href="https://user-images.githubusercontent.com/64807615/82736080-704d8480-9d59-11ea-8a90-bca157e234f9.jpg" target="_blank" style="color:black">
-		<image src="https://user-images.githubusercontent.com/64807615/82736080-704d8480-9d59-11ea-8a90-bca157e234f9.jpg"; style="width:100%;height:150px;";></a>
-  </div>
-
-  <div class="column" style="width:75%">
-	<p><b>Part 1:</b> Go to Land of Wind 0/1</p>
-	<p><b>Part 2:</b> Eavesdrop Enemy Intel 0/1 </p>
-  </div>
-</div>
+<hr>
+	<a href="https://user-images.githubusercontent.com/64807615/82736080-704d8480-9d59-11ea-8a90-bca157e234f9.jpg" target="_blank">
+	<image src="https://user-images.githubusercontent.com/64807615/82736080-704d8480-9d59-11ea-8a90-bca157e234f9.jpg"; style="width:600px;height:255px;text-align: center;" class="center"></a>
+	<p style="text-align:center"><b>Part 1:</b> Go to Land of Wind 0/1</p>
+	<p style="text-align:center"><b>Part 2:</b> Eavesdrop Enemy Intel 0/1 </p>
+<hr>
 <hr>
 <div class="row">
   <div class="column" style="width:25%"> 
@@ -80,8 +74,8 @@
 
   <div class="column" style="width:75%">
 	<p> You’ll see 3 different types of ninjas: </p>
-	<p> <b style="color:red"> Sunagakure Ninja Scout </b> – Those with the red life and red circles and are constantly roaming. They are extremely powerful and will kill you with one blow. </p>
-	<p> <b style="color:orange"> Sunagakure Sand Ninja </b> – Those with no circles and with blue life. They are just dummies to confuse you. </p>
+	<p> <b style="color:red"> Sunagakure Ninja Scout </b> – Those with the red life, red circles and are constantly roaming. They are extremely powerful and will kill you with one hit. </p>
+	<p> <b style="color:orange"> Sunagakure Sand Ninja </b> – Those with no circles and with blue life are just dummies to confuse you. </p>
 	<p> <b style="color:green"> Rogue Ninja </b> – This is the ninja that you need to find to complete the quest. </p>
   </div>
 </div>
@@ -94,9 +88,7 @@
 
   <div class="column" style="width:75%">
 	<p> You’ll need to find the Rogue Ninja. He is usually at the edge of the quest area. He will be beside a Sunagakure Sand Ninja. </p>
-	<p><b> Tip: </b> Sunagakure Ninja Scouts are extremely slow. Even if you get caught, you just need to simply outrun the until you find the Rogue Ninja </p>
-	<p> Once you approach the Rogue Ninja and the Sunagakure Ninja, they’ll start a conversation and your quest would have been completed. </p>
-	<p><b> Note: </b> If you die from the Sunagakure Ninja Scouts and fail your quest, you can always tap on the quest to start again. </p>
+	<p><b> Tip: </b> <b style="color:red"> Sunagakure Ninja Scout </b> are slow. Even if you get caught, you just need to simply outrun them until you find the <b style="color:green"> Rogue Ninja </b> </p>
   </div>
 </div>
 <hr>
@@ -108,11 +100,10 @@
   </div>
 
   <div class="column" style="width:75%">
-	<p> Once you approach the Rogue Ninja and the Sunagakure Ninja, they’ll start a conversation and your quest would have been completed. </p>
-	<p><b> Note: </b> If you die from the Sunagakure Ninja Scouts and fail your quest, you can always tap on the quest to start again. </p>
-  </div>
+	<p> Once you approach the <b style="color:green"> Rogue Ninja </b> and the Sunagakure Ninja, they’ll start a conversation and your quest would have been completed. </p>
+	<p><b> Note: </b> If you die from the <b style="color:red"> Sunagakure Ninja Scout </b> and fail your quest, you can always tap on the quest to start again. </p>
 </div>
-<hr>
+  </div>
 
 
 <footer>
