--- a/bclass.html
+++ b/bclass.html
@@ -39,12 +39,12 @@
 
 <div class="row">
   <div class="column" style="width:25%"> 
-		<a href="/fk.html" style="color:black">
-		<image src="xx"; style="width:100%;height:150px;";></a>
+		<a href="/fks.html" style="color:black">
+		<image src="https://user-images.githubusercontent.com/64807615/82739885-30e16100-9d76-11ea-80cf-a4c046fac8c3.jpg"; style="width:100%;height:150px;";></a>
   </div>
 
   <div class="column" style="width:75%">
-  	<a href="/fk.html" style="color:black">
+  	<a href="/fks.html" style="color:black">
 	<h3> Finding Konohamaru </h3></a>
   </div>
 </div>
