--- a/bclass.html
+++ b/bclass.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>  
-  <title>B Class Bounty</title>
+  <title>Finding Konohamaru Sarutobi</title>
 	<script>
 	function includeHTML() {
 	var z, i, elmnt, file, xhttp;
@@ -35,92 +35,105 @@
 <body>
 	<div w3-include-html="/navbar.html"></div> 
 	<script>includeHTML();</script>
-		<h2>B Class Bounty</h2>
+		<h2>Finding Konohamaru Sarutobi</h2>
+<hr>
+		<a href="https://user-images.githubusercontent.com/64807615/82739886-3179f780-9d76-11ea-9389-1b60c3708514.png" target="_blank">
+		<image src="https://user-images.githubusercontent.com/64807615/82739886-3179f780-9d76-11ea-9389-1b60c3708514.png"; style="width:600px;height:255px;text-align: center;" class="center"></a>
+		<p style="text-align:center"> Find Konohamaru 0/1</p>
+<hr>
+<h1 style="text-align:center"> Locations </h1>
+		<a href="https://user-images.githubusercontent.com/64807615/82739887-32128e00-9d76-11ea-8c3a-c20651b903db.png" target="_blank">
+		<image src="https://user-images.githubusercontent.com/64807615/82739887-32128e00-9d76-11ea-8c3a-c20651b903db.png"; style="width:600px;height:255px;text-align: center;" class="center"></a>
 
-<div class="row">
-  <div class="column" style="width:25%"> 
-		<a href="/fks.html" style="color:black">
-		<image src="https://user-images.githubusercontent.com/64807615/82739885-30e16100-9d76-11ea-80cf-a4c046fac8c3.jpg"; style="width:100%;height:150px;";></a>
-  </div>
-
-  <div class="column" style="width:75%">
-  	<a href="/fks.html" style="color:black">
-	<h3> Finding Konohamaru </h3></a>
-  </div>
-</div>
 <hr>
 <div class="row">
-  <div class="column" style="width:25%"> 
-		<a href="/mdc.html" style="color:black">
-		<image src="xx"; style="width:100%;height:150px;";></a>
+  <div class="column">
+		<p><b>Location A</b></p>	
+		<a href="https://user-images.githubusercontent.com/64807615/82739888-3343bb00-9d76-11ea-91f9-ef05ac50dba5.jpg" target="_blank" style="color:black">
+		<image src="https://user-images.githubusercontent.com/64807615/82739888-3343bb00-9d76-11ea-91f9-ef05ac50dba5.jpg"; style="width:100%;height:250px;";></a>
+		<p><b>Duty Room</b>Entrance from Outskirts; Near Izumo Kamizuki and Hagane Kotetsu</p>
   </div>
 
-  <div class="column" style="width:75%">
-  	<a href="/mdc.html" style="color:black">
-	<h3> Making Delicious Curry </h3></a>
+  <div class="column">
+		<p><b>Location B</b></p>	
+		<a href="https://user-images.githubusercontent.com/64807615/82739889-33dc5180-9d76-11ea-81f1-0dbd6dce93b9.jpg" target="_blank" style="color:black">
+		<image src="https://user-images.githubusercontent.com/64807615/82739889-33dc5180-9d76-11ea-81f1-0dbd6dce93b9.jpg"; style="width:100%;height:250px;";></a>
+		<p><b>Alley</b> Around the corner of the Duty Room</p>
   </div>
-</div>
 <hr>
 <div class="row">
-  <div class="column" style="width:25%"> 
-		<a href="/xx.html" style="color:black">
-		<image src="xx"; style="width:100%;height:150px;";></a>
+  <div class="column">
+		<p><b>Location C</b></p>	
+		<a href="xx" target="_blank" style="color:black">
+		<image src="xx"; style="width:100%;height:250px;";></a>
+		<p><b>Keywords:</b> Outskirts</p> 
+		<p><b>Location:</b> To the southwest of the border</p>
   </div>
 
-  <div class="column" style="width:75%">
-  	<a href="/xx.html" style="color:black">
-	<h3> Find Gold Kunai </h3></a>
+  <div class="column">
+		<p><b>Location D</b></p>	
+		<a href="xx" target="_blank" style="color:black">
+		<image src="xx"; style="width:100%;height:250px;";></a>
+		<p><b>Keywords:</b> Ruins</p> 
+		<p><b>Location:</b> To the southwest of the border</p>
   </div>
-</div>
 <hr>
 <div class="row">
-  <div class="column" style="width:25%"> 
-		<a href="/xx.html" style="color:black">
-		<image src="xx"; style="width:100%;height:150px;";></a>
+  <div class="column">
+		<p><b>Location E</b></p>	
+		<a href="xx" target="_blank" style="color:black">
+		<image src="xx"; style="width:100%;height:250px;";></a>
+		<p><b>Keywords:</b> Outskirts</p> 
+		<p><b>Location:</b> To the southwest of the border</p>
   </div>
 
-  <div class="column" style="width:75%">
-  	<a href="/xx.html" style="color:black">
-	<h3> Sand Clearing </h3></a>
+  <div class="column">
+		<p><b>Location F</b></p>	
+		<a href="xx" target="_blank" style="color:black">
+		<image src="xx"; style="width:100%;height:250px;";></a>
+		<p><b>Keywords:</b> Ruins</p> 
+		<p><b>Location:</b> To the southwest of the border</p>
   </div>
-</div>
 <hr>
 <div class="row">
-  <div class="column" style="width:25%"> 
-		<a href="/xx.html" style="color:black">
-		<image src="xx"; style="width:100%;height:150px;";></a>
+  <div class="column">
+		<p><b>Location G</b></p>	
+		<a href="xx" target="_blank" style="color:black">
+		<image src="xx"; style="width:100%;height:250px;";></a>
+		<p><b>Keywords:</b> Outskirts</p> 
+		<p><b>Location:</b> To the southwest of the border</p>
   </div>
 
-  <div class="column" style="width:75%">
-  	<a href="/xx.html" style="color:black">
-	<h3> Intercept Akatsuki's Intelligence </h3></a>
+  <div class="column">
+		<p><b>Location H</b></p>	
+		<a href="xx" target="_blank" style="color:black">
+		<image src="xx"; style="width:100%;height:250px;";></a>
+		<p><b>Keywords:</b> Ruins</p> 
+		<p><b>Location:</b> To the southwest of the border</p>
   </div>
-</div>
 <hr>
 <div class="row">
-  <div class="column" style="width:25%"> 
-		<a href="/xx.html" style="color:black">
-		<image src="xx"; style="width:100%;height:150px;";></a>
+  <div class="column">
+		<p><b>Location I</b></p>	
+		<a href="xx" target="_blank" style="color:black">
+		<image src="xx"; style="width:100%;height:250px;";></a>
+		<p><b>Keywords:</b> Outskirts</p> 
+		<p><b>Location:</b> To the southwest of the border</p>
   </div>
 
-  <div class="column" style="width:75%">
-  	<a href="/xx.html" style="color:black">
-	<h3> Searching Medicine </h3></a>
+  <div class="column">
+		<p><b>Location J</b></p>	
+		<a href="xx" target="_blank" style="color:black">
+		<image src="xx"; style="width:100%;height:250px;";></a>
+		<p><b>Keywords:</b> Ruins</p> 
+		<p><b>Location:</b> To the southwest of the border</p>
   </div>
-</div>
 <hr>
-<div class="row">
-  <div class="column" style="width:25%"> 
-		<a href="/xx.html" style="color:black">
-		<image src="xx"; style="width:100%;height:150px;";></a>
-  </div>
-
-  <div class="column" style="width:75%">
-  	<a href="/xx.html" style="color:black">
-	<h3> b3 </h3></a>
-  </div>
-</div>
-<hr>
+		<p><b>Location K</b></p>	
+		<a href="fksboard" target="_blank" style="color:black">
+		<image src="fksboard"; style="width:100%;height:250px;"></a>
+		<p><b>Keywords:</b> Ruins</p> 
+		<p><b>Location:</b> To the southwest of the border</p>
 
 <footer>
   <p>Footer</p>
