--- a/fks.html
+++ b/fks.html
@@ -41,17 +41,16 @@
 		<image src="https://user-images.githubusercontent.com/64807615/82739886-3179f780-9d76-11ea-9389-1b60c3708514.png"; style="width:600px;height:255px;text-align: center;" class="center"></a>
 		<p style="text-align:center"> Find Konohamaru 0/1</p>
 <hr>
-<h1 style="text-align:center"> Locations </h1>
-		<a href="https://user-images.githubusercontent.com/64807615/82739887-32128e00-9d76-11ea-8c3a-c20651b903db.png" target="_blank">
-		<image src="https://user-images.githubusercontent.com/64807615/82739887-32128e00-9d76-11ea-8c3a-c20651b903db.png"; style="width:600px;height:255px;text-align: center;" class="center"></a>
-
+<h1 style="text-align:center"> Konohamaru's Locations </h1>
+		<a href="https://user-images.githubusercontent.com/64807615/82740427-25dcff80-9d7b-11ea-8bfa-a92b71f489df.png" target="_blank">
+		<image src="https://user-images.githubusercontent.com/64807615/82740427-25dcff80-9d7b-11ea-8bfa-a92b71f489df.png"; style="width:100%;height:400px;text-align: center;" class="center"></a>
 <hr>
 <div class="row">
   <div class="column">
 		<p><b>Location A</b></p>	
 		<a href="https://user-images.githubusercontent.com/64807615/82739888-3343bb00-9d76-11ea-91f9-ef05ac50dba5.jpg" target="_blank" style="color:black">
 		<image src="https://user-images.githubusercontent.com/64807615/82739888-3343bb00-9d76-11ea-91f9-ef05ac50dba5.jpg"; style="width:100%;height:250px;";></a>
-		<p><b>Duty Room</b>Entrance from Outskirts; Near Izumo Kamizuki and Hagane Kotetsu</p>
+		<p><b>Duty Room</b> Entrance from Outskirts; Near Izumo Kamizuki and Hagane Kotetsu</p>
   </div>
 
   <div class="column">
@@ -64,18 +63,16 @@
 <div class="row">
   <div class="column">
 		<p><b>Location C</b></p>	
-		<a href="xx" target="_blank" style="color:black">
-		<image src="xx"; style="width:100%;height:250px;";></a>
-		<p><b>Keywords:</b> Outskirts</p> 
-		<p><b>Location:</b> To the southwest of the border</p>
+		<a href="https://user-images.githubusercontent.com/64807615/82739875-2b841680-9d76-11ea-8994-ba6f80e2b5d8.jpg" target="_blank" style="color:black">
+		<image src="https://user-images.githubusercontent.com/64807615/82739875-2b841680-9d76-11ea-8994-ba6f80e2b5d8.jpg"; style="width:100%;height:250px;";></a>
+		<p><b>Hospital</b> At the front yard of Konoha Hospital</p>
   </div>
 
   <div class="column">
 		<p><b>Location D</b></p>	
-		<a href="xx" target="_blank" style="color:black">
-		<image src="xx"; style="width:100%;height:250px;";></a>
-		<p><b>Keywords:</b> Ruins</p> 
-		<p><b>Location:</b> To the southwest of the border</p>
+		<a href="https://user-images.githubusercontent.com/64807615/82739876-2cb54380-9d76-11ea-8007-6267facef3e3.jpg" target="_blank" style="color:black">
+		<image src="https://user-images.githubusercontent.com/64807615/82739876-2cb54380-9d76-11ea-8007-6267facef3e3.jpg"; style="width:100%;height:250px;";></a>
+		<p><b>Hospital Side</b> Behind the tree at the left side of the Konoha Hospital</p>
   </div>
 <hr>
 <div class="row">
@@ -83,8 +80,7 @@
 		<p><b>Location E</b></p>	
 		<a href="xx" target="_blank" style="color:black">
 		<image src="xx"; style="width:100%;height:250px;";></a>
-		<p><b>Keywords:</b> Outskirts</p> 
-		<p><b>Location:</b> To the southwest of the border</p>
+		<p><b>Chunin Exam Hall</b> Garden patch beside between Tenten and a tree</p>
   </div>
 
   <div class="column">
