--- a/fks.html
+++ b/fks.html
@@ -43,7 +43,7 @@
 <hr>
 <h1 style="text-align:center"> Konohamaru's Locations </h1>
 		<a href="https://user-images.githubusercontent.com/64807615/82740427-25dcff80-9d7b-11ea-8bfa-a92b71f489df.png" target="_blank">
-		<image src="https://user-images.githubusercontent.com/64807615/82740427-25dcff80-9d7b-11ea-8bfa-a92b71f489df.png"; style="width:100%;height:400px;text-align: center;" class="center"></a>
+		<image src="https://user-images.githubusercontent.com/64807615/82740427-25dcff80-9d7b-11ea-8bfa-a92b71f489df.png"; style="width:600px;height:400px;text-align: center;" class="center"></a>
 <hr>
 <div class="row">
   <div class="column">
